fix one issue on mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     color: white;
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    z-index: 1;
 }
 body ::before{
     content: '';
